js/js.translator/testData/incremental/invalidation/mainFunctionSelectCrossedFilePackagePlainAndArgsFail/main/aFilePkgZPlain.1.kt
package z

fun main() {
    value.ok += "P1"
}
